# AI-SPEECH

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_session_settings.py  003_add_animation_models.py  004_add_background_image_path_to_scenarios.py  005_background_image_paths_json.py  006_add_vrm_library.py  007_drop_vrm_library.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: animations.py  backgrounds.py  characters.py  chat.py  generation.py  health.py  models.py  router.py  scenarios.py  session_settings.py  speech.py  tts.py
backend/app/core/: config.py  database.py  exceptions.py  redis.py
backend/app/models/: __init__.py  animation_model.py  character.py  scenario.py  session_settings.py
backend/app/repositories/: animation_model_repository.py  character_repository.py  scenario_repository.py  session_settings_repository.py
backend/app/schemas/: animation.py  background.py  character.py  chat.py  generation.py  model_storage.py  scenario.py  session_settings.py  stt.py  tts.py  voice.py
backend/app/services/: __init__.py  animation_service.py  character_service.py
backend/app/services/chat/: __init__.py  chat_service.py  session_manager.py
backend/app/services/generation/: __init__.py  generation_service.py  prompts.py
backend/app/services/llm/: __init__.py  base.py  langchain_service.py
backend/scripts/: migrate_to_s3.py
(+191 files in other folders)
